--- a/src/css/app.css
+++ b/src/css/app.css
@@ -9,6 +9,7 @@ body{
     --light-red: #ff6677;
     --dark-red: #ff2244;
 
+    --very-light-gray: #aaaabb;
     --light-gray: #4B4F58;
     --dark-gray: #3B3F48;
 
