--- a/src/css/Button.css
+++ b/src/css/Button.css
@@ -1,5 +1,5 @@
 
-.PDC__Wrapper{
+.PDC__ButtonWrapper{
     display: block;
     position: relative;
     font-size: 12px;
@@ -11,23 +11,23 @@
     background-color: transparent;
 }
 
-.PDC__Wrapper--red{
+.PDC__ButtonWrapper--red{
     color: var(--light-red);
     border: 2px solid var(--light-red);
 }
 
-.PDC__Wrapper--disabled{
+.PDC__ButtonWrapper--disabled{
     background-color: var(--very-light-gray);
     border: 2px solid var(--light-gray);
     color: var(--light-white);
     cursor: auto;
 }
 
-.PDC__Wrapper:hover{
+.PDC__ButtonWrapper:hover{
     color: var(--white);
 }
 
-.PDC__Wrapper::after {
+.PDC__ButtonWrapper::after {
     content: "";
     background: linear-gradient(to bottom right, var(--light-blue), var(--dark-blue));
     opacity: 0;
@@ -37,18 +37,18 @@
     right: 0;
     position: absolute;
     z-index: -1;
-    transition: all 0.2s;   
+    transition: all 0.3s ease;   
 }
 
-.PDC__Wrapper--red::after{
+.PDC__ButtonWrapper--red::after{
     background: linear-gradient(to bottom right, var(--light-red), var(--dark-red));
 }
 
-.PDC__Wrapper--disabled::after{
+.PDC__ButtonWrapper--disabled::after{
     background: var(--very-light-gray);
 }
 
-.PDC__Wrapper:hover::after {
+.PDC__ButtonWrapper:hover::after {
     opacity: 1;
 }
 
@@ -62,16 +62,16 @@
     background-color: inherit;
     width: 100%;
     pointer-events: none;
-    padding: 20px;
+    padding: 15px;
     color: inherit;
 }
 
-.PDC__Wrapper--large{
+.PDC__ButtonWrapper--large{
     font-size: 18px;
     width: 250px;
 }
 
-.PDC__Wrapper--small{
+.PDC__ButtonWrapper--small{
     font-size: 10px;
     width: 125px;
 }
